--- a/ask_ayo_v3_backend/package.json
+++ b/ask_ayo_v3_backend/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "openai": "^4.20.1",
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
